CI: Use -O3 builds for Liquid integration tests.
The other integration tests are taking under an hour, and this is
taking 1hr 30m.

The downside is that backtraces are far less clear, but that's why the
main run uses the full debug version.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -505,7 +505,7 @@ jobs:
           # And don't forget about elements (like cdecker did when
           # reworking the CI...)
           - NAME: liquid
-            CFG: compile-gcc
+            CFG: compile-gcc-O3
             COMPILER: gcc
             TEST_NETWORK: liquid-regtest
             TEST_DB_PROVIDER: sqlite3
