gitignore: add lightningd/lightning_gossip_compactd
Changelog-None

--- a/lightningd/.gitignore
+++ b/lightningd/.gitignore
@@ -4,6 +4,7 @@ lightning_closingd
 lightning_connectd
 lightning_dualopend
 lightning_gossipd
+lightning_gossip_compactd
 lightning_hsmd
 lightning_onchaind
 lightning_openingd
