--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "plugins/lsps-plugin",
     "plugins/wss-proxy-plugin",
     "plugins/bip353-plugin",
+    "plugins/currencyrate-plugin",
 ]
 
 [workspace.dependencies]
