--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,7 @@ plugins/cln-grpc
 plugins/clnrest
 plugins/wss-proxy
 plugins/cln-bip353
-plugins/currencyrate
+plugins/cln-currencyrate
 .clangd
 .cargo/
 
