CI: Speed up 'min-btc-support' by compiling clang with -O3.
It's timing out after 2 hours sometimes: this now make it finish in 53
minutes.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -132,6 +132,7 @@ jobs:
           - CFG: compile-clang
             VALGRIND: 1
             COMPILER: clang
+            COPTFLAGS_VAR: COPTFLAGS="-O3"
             DEBUG_BUILD: --enable-debugbuild
           - CFG: compile-clang-sanitizers
             COMPILER: clang
