CI: shorten job names.
On the GH action view I can only see "Compile CLN compile-c" which is not enough!

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -110,7 +110,7 @@ jobs:
           if-no-files-found: ignore
 
   compile:
-    name: Compile CLN ${{ matrix.cfg }}
+    name: Build ${{ matrix.cfg }}
     runs-on: ubuntu-24.04
     timeout-minutes: 30
     needs:
