CI: Disable flakiness tracking.
287abfbd901616a8c81a02ce366158b4f4630ddf "ci: Add a simple plugin to
report test results to our falkiness tracker" slowed our integration
tests to a crawl: out 6-way gcc integration tests should have taken 20
minutes, but were taking 1hr 24 minutes, and some runs were timing out
altogether.

I cannot reach the server, seems it is down.  But tracking flakiness
is rarely useful, so I am disabling this.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,8 @@ env:
   # Reduce size, helps upload-artifact work more reliably
   RUST_PROFILE: small
   SLOW_MACHINE: 1
-  CI_SERVER_URL: "http://35.239.136.52:3170"
+  # This is for the pytest-trackflaky:
+  # CI_SERVER_URL: "http://35.239.136.52:3170"
   PYTEST_OPTS_BASE: "-vvv --junit-xml=report.xml --timeout=1800 --durations=10"
   TEST_LOG_IGNORE_ERRORS: "1"
   SCCACHE_GHA_ENABLED: "true"
