--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -356,6 +356,20 @@ jobs:
     runs-on: ubuntu-24.04
     needs:
       - check-compiled-source
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     strategy:
       fail-fast: false
       matrix:
@@ -365,7 +379,7 @@ jobs:
             TEST_NETWORK: regtest
             VALGRIND: 1
           - CFG: compile-gcc
-            TEST_DB_PROVIDER: postgres
+            TEST_DB_PROVIDER: postgres-system
             TEST_NETWORK: regtest
           - CFG: compile-gcc
             TEST_DB_PROVIDER: sqlite3
@@ -425,6 +439,7 @@ jobs:
           SLOW_MACHINE: 1
           TEST_DEBUG: 1
           TEST_DB_PROVIDER: ${{ matrix.TEST_DB_PROVIDER }}
+          TEST_DB_PROVIDER_DSN: postgres://postgres:postgres@localhost:5432/postgres
           TEST_NETWORK: ${{ matrix.TEST_NETWORK }}
           LIGHTNINGD_POSTGRES_NO_VACUUM: 1
           VALGRIND: ${{ matrix.VALGRIND }}
@@ -528,6 +543,20 @@ jobs:
       RUST_PROFILE: small # Has to match the one in the compile step
     needs:
       - first-integration
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     strategy:
       fail-fast: false
       matrix:
@@ -537,7 +566,7 @@ jobs:
           - NAME: postgres
             CFG: compile-gcc-O3
             COMPILER: gcc
-            TEST_DB_PROVIDER: postgres
+            TEST_DB_PROVIDER: postgres-system
             TEST_NETWORK: regtest
           # And don't forget about elements (like cdecker did when
           # reworking the CI...)
@@ -611,6 +640,7 @@ jobs:
           SLOW_MACHINE: 1
           TEST_DEBUG: 1
           TEST_DB_PROVIDER: ${{ matrix.TEST_DB_PROVIDER }}
+          TEST_DB_PROVIDER_DSN: postgres://postgres:postgres@localhost:5432/postgres
           TEST_NETWORK: ${{ matrix.TEST_NETWORK }}
           LIGHTNINGD_POSTGRES_NO_VACUUM: 1
           PYTEST_OPTS: ${{ env.PYTEST_OPTS_BASE }}
